--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -48,6 +48,188 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="75" data-price="164.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XHHOkJ"><img src="https://images-na.ssl-images-amazon.com/images/I/515cR1uRzxL._SY679_.jpg" alt="Apple iPhone 6S" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,955 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>75% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XHHOkJ">Apple iPhone 6S, GSM Unlocked, 64GB - Silver (Renewed)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$164.99</span><span class="ori_price">$659.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XHHOkJ">Shop Now at Amazon</a><p>run out of stock soon</p></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="54.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LyZzvX"><img src="https://images-na.ssl-images-amazon.com/images/I/61XWgRQJ0ML._SX679_.jpg" alt="Anker Roav DashCam C1" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,357 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LyZzvX">Anker Roav DashCam C1, Car Driving Recorder with Sony Sensor, 1080p FHD, Wide Angle Dash Cam, Wi-Fi, G-Sensor, WDR, Loop Recording,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$54.39</span><span class="ori_price">$72.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LyZzvX">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="34" data-price="12.47">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LGc6xA"><img src="https://images-na.ssl-images-amazon.com/images/I/71QeIdBBuNL._SX522_.jpg" alt="Banana Boat Sunscreen Sport Performance" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>496 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>34% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LGc6xA">Banana Boat Sunscreen Sport Performance, Broad Spectrum Sunscreen Spray - SPF 50 - 6 Ounce Twin Pack </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$12.47</span><span class="ori_price">$18.99</span>
+        <div class="tooltip_orange"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount width coupon</p></div></div> 
+      </address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LGc6xA">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="10.77">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jap1GF"><img src="https://images-na.ssl-images-amazon.com/images/I/61f8vGotNrL._SX522_.jpg" alt="NIVEA Men DEEP Active Clean Body Wash" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>2,108 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jap1GF">NIVEA Men DEEP Active Clean Body Wash - 8-hour Fresh Scent with Natural Charcoal - 16.9 fl. oz. Bottle (Pack of 3) </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$10.77</span><span class="ori_price">$17.97</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Jap1GF">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="53" data-price="59.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LEHzk5"><img src="https://images-na.ssl-images-amazon.com/images/I/A1sA2vVQGgL._SY879_.jpg" alt="Timbuk2 Command Laptop Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>211 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LEHzk5">Timbuk2 Command Laptop Backpack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$59.99</span><span class="ori_price">$129.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LEHzk5">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="35.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xvcHtW"><img src="https://images-na.ssl-images-amazon.com/images/I/71LVaoDOnUL._UX679_.jpg" alt="Oakley Men's Voyage 23l Roll Top Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>5 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xvcHtW">Oakley Men's Voyage 23l Roll Top Backpack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$35.99</span><span class="ori_price">$120.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xvcHtW">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="58" data-price="37.75">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2xqJ2C4"><img src="https://images-na.ssl-images-amazon.com/images/I/91gUdyHXbyL._UY741_.jpg" alt="Herschel Supply Co." /></a>
+    <div class="rating"><p>0 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>58% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2xqJ2C4">Herschel Supply Co. Little America Youth Children's Backpack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$37.75</span><span class="ori_price">$89.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2xqJ2C4">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="16.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J9hzvh"><img src="https://images-na.ssl-images-amazon.com/images/I/71Nu%2Bt8OmoL._UX522_.jpg" alt="Under Armour Men's Hoodie" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>129 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J9hzvh">Under Armour Men's Armourfleece Spectrum Pull Over Hoodie</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$16.50</span><span class="ori_price">$55.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J9hzvh">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="48" data-price="28.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XOeoRK"><img src="https://images-na.ssl-images-amazon.com/images/I/71zQwWDDjUL._SX679_.jpg" alt="ZAGG Slim Book Ultrathin Case" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>721 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>28.99% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XOeoRK">ZAGG Slim Book Ultrathin Case, Hinged with Detachable Bluetooth Keyboard for Apple iPad mini 2 / iPad mini 3 - Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$28.99</span><span class="ori_price">$55.38</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XOeoRK">Shop Now at Amazon</a><p>run out of stock soon</p></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="8.93">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LAOxq6"><img src="https://m.media-amazon.com/images/I/71iL4WdraXL._AC_UL436_.jpg" alt="iFrogz Audio" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>253 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LAOxq6">iFrogz Audio - Plugz Wireless Bluetooth Earbuds - Silver</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$8.93</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2LAOxq6">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="37" data-price="18.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/308V6V2"><img src="https://images-na.ssl-images-amazon.com/images/I/81thvabU-GL._SX679_.jpg" alt="Fosmon Travel Pillow" /></a>
