--- a/app/views/blogs/fourthofjuly.html.erb
+++ b/app/views/blogs/fourthofjuly.html.erb
@@ -6,7 +6,7 @@
       <div class="blog_body">
 
         <div class="blog_tit">
-          <h2><span class="fourth_title">List 4th of July Deals</span></h2>
+          <h2><span class="fourth_title">The List of "4th of July's Deal"</span></h2>
         </div>
          
         <div class="blog_ctn memorial fourthjuly">
