--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -330,5 +330,7 @@
   .popup-content table{margin:70px auto;}
 }
 
-
+/* for mistake */
+.mistake{text-align:center;margin:60px 0;}
+.mistake h3{font-size:20px;}
 
