--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -48,6 +48,132 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="57" data-price="12.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YwHqmf"><img src="https://images-na.ssl-images-amazon.com/images/I/71sfAL8oxAL._SY679_.jpg" alt="Jarrow Formulas Methylcobalamin" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>2,284 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>57% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YwHqmf">Jarrow Formulas Methylcobalamin (Methyl B12), Supports Brain Cells, 5000 mcg, 60 Lozenges </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$12.97</span><span class="ori_price">$29.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YwHqmf">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="56" data-price="15.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jcg5jZ"><img src="https://images-na.ssl-images-amazon.com/images/I/71DsoIX2%2BSL._SX522AA522_PIbundle-3,TopRight,0,0_AA522_SH20_.jpg" alt="SlimFast" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>708 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>56% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jcg5jZ">SlimFast Advanced Nutrition Creamy Chocolate Shake – Ready to Drink Meal Replacement – 20g of Protein – 11 fl. oz. Bottle – 12 Count </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$15.98</span><span class="ori_price">$36.07</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Jcg5jZ">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="56" data-price="6.17">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30f3EcV"><img src="https://images-na.ssl-images-amazon.com/images/I/71vYfnDf%2BuL._SX522_.jpg" alt="Garden of Life Zinc Vitamin" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>500 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>56% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30f3EcV">Garden of Life Zinc Vitamin - Vitamin Code Raw Zinc Whole Food Supplement with Vitamin C, Vegan, 60 Capsules </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$6.17</span><span class="ori_price">$13.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30f3EcV">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="53" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jcgenx"><img src="https://images-na.ssl-images-amazon.com/images/I/719KqXrUiQL._SY879_.jpg" alt="Doctor's Best Vitamin C" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>306 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jcgenx">Doctor's Best Vitamin C with Quali-C 1000 mg, Non-GMO, Vegan, Gluten Free, Soy Free</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$13.99</span><span class="ori_price">$29.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Jcgenx">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="53" data-price="7.02">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ywl4kQ"><img src="https://images-na.ssl-images-amazon.com/images/I/61coMRia9kL._SX522_.jpg" alt="NOW L-Glutamine 500 mg 120 Capsules" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>447 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>53% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ywl4kQ">NOW L-Glutamine 500 mg 120 Capsules </a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$7.02</span><span class="ori_price">$14.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Ywl4kQ">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="24" data-price="327.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XsYTPW"><img src="https://images-na.ssl-images-amazon.com/images/I/91GMSrYPaHL._SX679_.jpg" alt="Samsung Samrt TV" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>160 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>24% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XsYTPW">Samsung UN43RU7100FXZA FLAT 43'' 4K UHD 7 Series Smart TV (2019)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$327.99</span><span class="ori_price">$429.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XsYTPW">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YyEl55"><img src="https://images-na.ssl-images-amazon.com/images/I/71lprXHznaL._SX679_.jpg" alt="FosPower Emergency Solar Hand Crank Portable Radio" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>212 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YyEl55">FosPower Emergency Solar Hand Crank Portable Radio, NOAA Weather Radio for Household and Outdoor Emergency with AM/FM,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$29.99</span><span class="ori_price">$39.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2YyEl55">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card dealofday clearfix" data-score="44" data-price="discounted_price">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2XiYg6E"><img src="https://images-na.ssl-images-amazon.com/images/I/810dZGLhVwL._SX679_.jpg" alt="Amazon Deal Of The Day" /></a>
