--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -27,6 +27,213 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="25" data-price="15.74">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JbNTxz"><img src="https://m.media-amazon.com/images/I/61XIvlaAN5L._SR400,400_.jpg" alt="Modoker Travel Laptop Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>15 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JbNTxz">Modoker Travel Laptop Backpack with USB Charging Port, Slim Travel Bookbag for Women Men College School Backpack Student...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.74</span><span class="ori_price">$20.99</span>
+         <div class="tooltip_red"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+         <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>25% off at $20.99</strong> with promo code: <strong>25MODOKERBAG</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 14, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JbNTxz">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="56" data-price="3.96">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/30cUZI0"><img src="https://m.media-amazon.com/images/I/61dDSzoOMBL._SR400,400_.jpg" alt="Mens Low Cut Ankle Socks" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>32 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>56% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/30cUZI0">Mens Low Cut Ankle Socks Comfy Breathable Casual Socks 6/12 Pairs Super ValueMens Low Cut Ankle Socks Comfy Breathable Casual Socks...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$3.96</span><span class="ori_price">$8.99</span></address>
+      <p><span>Take <strong>56% off at $8.99</strong> with promo code: <strong>56UMLTG1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 05, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/30cUZI0">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="16.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RW9Bsj"><img src="https://m.media-amazon.com/images/I/71sC5MxN2PL._SR400,400_.jpg" alt="Angle Grinder" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>18 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RW9Bsj">Angle Grinder, GALAX PRO 6 Amp Grinder Tool with 2 4-1/2 Abrasive Wheels, Side Handle, Safety Guard & Spanner for Disc Attachment,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.50</span><span class="ori_price">$32.99</span>
+        <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $32.99</strong> with promo code: <strong>50YVZOP2</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 05, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RW9Bsj">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="16.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FTWmU2"><img src="https://m.media-amazon.com/images/I/61rF-1fDwoL._SR400,400_.jpg" alt="CLEVER BRIGHT Portable Bluetooth Speakers" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>36 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FTWmU2">CLEVER BRIGHT Portable Bluetooth Speakers Touch Control LED Lights 6 Light Modes Wireless Speaker HD HiFi Powerful Sound Built-in Mic,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.79</span><span class="ori_price">$25.83</span></address>
+      <p><span>Take <strong>35% off at $25.83</strong> with promo code: <strong>35JB1Q7O</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FTWmU2">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="30.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2FSgHt4"><img src="https://m.media-amazon.com/images/I/61qpXr91VVL._SR400,400_.jpg" alt="JOLLYVOGUE Weighted Blanket" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>256 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2FSgHt4">JOLLYVOGUE Weighted Blanket 20lbs for Adults,60 x 80Inches Twin or Full Sized Bed Heavy Blanket with 100% Soft...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$30.00</span><span class="ori_price">$59.99</span></address>
+      <p><span>Take <strong>50% off at $59.99</strong> with promo code: <strong>50DCK1D5</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2FSgHt4">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="39.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/321AaRo"><img src="https://m.media-amazon.com/images/I/61gIpuPzULL._SR400,400_.jpg" alt="Flame Light with Remote" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>3 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/321AaRo">Flame Light with Remote - Frosted Glass Shade Included | Rechargeable Battery Operated LED Candle Table Lamp with Timer...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$39.99</span><span class="ori_price">$79.99</span></address>
+      <p><span>Take <strong>50% off at $79.99</strong> with promo code: <strong>50ABAABA</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 13, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/321AaRo">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="20.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JdeYRg"><img src="https://m.media-amazon.com/images/I/71qRfhluxUL._SR400,400_.jpg" alt="9005 LED Headlight Bulbs Conversion Kits" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>76 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JdeYRg">9005 LED Headlight Bulbs Conversion Kits, NOVSIGHT Extremely Bright CSP Chips All-in-One LED Headlights/Fog Light Bulb,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.00</span><span class="ori_price">$39.99</span></address>
+      <p><span>Take <strong>50% off at $39.99</strong> with promo code: <strong>50FTIGF5</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 06, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JdeYRg">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="23.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/32a5UDW"><img src="https://m.media-amazon.com/images/I/71k4HN1GW0L._SR400,400_.jpg" alt="FITVII Fitness Tracker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>34 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/32a5UDW">FITVII Fitness Tracker Waterproof Activity Tracker with Heart Rate Blood Pressure Monitor, Color Screen Smart Bracelet...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.00</span><span class="ori_price">$45.99</span>
+         <div class="tooltip_green"><span>Extra Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>50% off at $45.99</strong> with promo code: <strong>5038GWV3</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/32a5UDW">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="14.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/3059AVQ"><img src="https://m.media-amazon.com/images/I/61N+zIDcveL._SR400,400_.jpg" alt="" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>248 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/3059AVQ">ELECJET MagJet, Magnetic USB C Adapter, Magsafe replacement, 6.6ft PD Type C Charging Cable Support ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.39</span><span class="ori_price">$23.99</span></address>
+      <p><span>Take <strong>40% off at $23.99</strong> with promo code: <strong>40MAGJET</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/3059AVQ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="28.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JaVMmY"><img src="https://m.media-amazon.com/images/I/71BEsZE99mL._SR400,400_.jpg" alt="Mythinglogic Double Rail Garment Rack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>13 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JaVMmY">Mythinglogic Double Rail Garment Rack with Wheels, Commercial Rolling Clothes Drying Rack Height Adjustable Clothing Hanging Rack...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$28.19</span><span class="ori_price">$46.99</span></address>
+      <p><span>Take <strong>40% off at $46.99</strong> with promo code: <strong>40HM9X5E</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 07, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JaVMmY">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="60" data-price="8.00">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Jm8MFk"><img src="https://m.media-amazon.com/images/I/61QlFURDodL._SR400,400_.jpg" alt="AINOPE Bluetooth FM Transmitter for Car," /></a>
